# AutoDeduction

./: .gitignore  README.md
AutoDeductionV2/: CMakeLists.txt  client.cpp  server.cpp  try_db.cpp
AutoDeductionV2/client/: client.cpp  client.h
AutoDeductionV2/cmake/: FindGFlags.cmake  FindMySQL.cmake
AutoDeductionV2/db/: dbserver.cpp  dbserver.h
AutoDeductionV2/proto/: autodeduction.grpc.pb.cc  autodeduction.grpc.pb.h  autodeduction.pb.cc  autodeduction.pb.h  autodeduction.proto  client_config.pb.cc  client_config.pb.h  client_config.proto  server_config.pb.cc  server_config.pb.h  server_config.proto
AutoDeductionV2/service/: service.cpp  service.h
AutoDeductionV2/utils/: get_file_content.cpp  get_file_content.h  proto_helper.cpp  proto_helper.h
docs/: hld.md  introduction.md  设计题.md
scripts/: create_database.sql  gen_openssl.sh
